--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "brain.js": "^1.6.1",
+    "dotenv": "^16.3.1",
+    "mysql": "^2.18.1",
     "random-words": "^2.0.0"
   }
 }
